--- a/client/index.html
+++ b/client/index.html
@@ -5,5 +5,6 @@
     <title>TWCSS</title>
 </head>
 <body>
-    <h2 class="text-4xl font-bold text-center text-blue-500">Hello</h2>
+    <h5 class="text-4xl text-center">Hello</h5>
 </body>
+
